feat: Heuristic
Heuristic completed and tests fully uncommented. Fail testing Ejercicio4
-some more debugging to accomplish-. Other minor changes added.